<resources>
    <string name="app_name">Pet Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_me_title">About me</string>
    <string name="about_me_message" translatable="false">Lorem ipsum dolor sit amet consectetur adipiscing elit scelerisque ultricies, ridiculus nulla a sollicitudin id pharetra tincidunt nullam ligula et, venenatis nisi curae taciti integer sodales condimentum conubia. Pharetra posuere porttitor at quisque maecenas sapien integer class habitant curabitur erat, interdum ad mollis proin ultrices montes fermentum dictumst ornare molestie, facilisi sociis fames congue aliquam lectus non pretium lacinia elementum. Turpis non magna hac porta sollicitudin maecenas nunc eget rutrum laoreet tellus, lacinia quis nullam aliquet mi fermentum ante vel semper mus, conubia per bibendum risus varius natoque euismod massa sociosqu suspendisse.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="preference_pet_name" translatable="false">edit_text_preference_pet_name</string>
    <string name="title_activity_main">Your Pet\'s Notes</string>
    <string name="title_activity_new_note">New Note</string>
    <string name="generic_failure_dialog_title">Something went wrong</string>
    <string name="generic_failure_dialog_message">Please try again later.</string>
    <string name="new_note_activity_title">Add a new note</string>
    <string name="tv_note_type_label">Note type</string>
    <string name="til_newNote_noteContent_hint">Write down your note here…</string>
    <string name="mb_newNote_saveButton_text">Save</string>
    <string name="empty_title_message">Title can\'t be empty</string>
    <string name="empty_note_content_message">The note can\'t be empty</string>
    <string name="main_title">%s\'s Notes</string>
    <string name="edit_note_activity_title">Edit Note</string>
    <string name="til_editNote_title_hint">Tittle</string>
    <string name="mb_editNote_saveButton_text">Save</string>
    <string name="delete_note_confirmation_dialog_title">Delete</string>
    <string name="delete_note_confirmation_dialog_message">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="til_editNote_noteContent_hint">Note</string>
    <string name="til_newNote_title_hint">Write down the title here…</string>
    <string name="note_type_vaccine">Vaccine</string>
    <string name="note_type_other">Other</string>
    <string name="note_type_bath">Bath</string>
    <string name="note_type_haircut">Haircut</string>
    <string name="mb_delete">DELETE</string>
    <string name="mb_edit">EDIT</string>
    <string name="no_notes_message">No notes yet.\nAdd one!</string>
    <string name="til_editNote_title_date">Remind me on…</string>
    <string name="notification_title">Reminder</string>
    <string name="creation_date_label">Created on</string>
    <string name="user_insertion_fail">Username already exists</string>
    <string name="empty_error_message">This field can\'t be empty</string>
    <string name="wrong_password">Wrong password</string>
    <string name="user_not_found">User not found</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_logout">Logout</string>
    <string name="tv_login_title">Login</string>
    <string name="til_login_email">Username</string>
    <string name="til_login_password">Password</string>
    <string name="mb_login_submit">LOGIN</string>
    <string name="tv_login_link_to_register">or create an account here</string>
    <string name="tv_register_title">Register</string>
    <string name="til_register_email_hint">Username</string>
    <string name="til_register_password_hint">Password</string>
    <string name="til_register_confirm_password_hint">Confirm password</string>
    <string name="mb_register_submit">REGISTER</string>
</resources>
