<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"


        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_editNote"

            android:layout_width="match_parent"
            android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctl_editNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/Collapsed"
                app:contentScrim="?attr/colorPrimary"

                app:expandedTitleTextAppearance="@style/Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:scrimAnimationDuration="200"
                app:title="@string/edit_note_activity_title"
                app:toolbarId="@+id/tb_editNote">

            <TextView
                    android:id="@+id/tv_editNote_appBarText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/edit_note_activity_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb_editNote"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:showDividers="middle"
                tools:context=".editNoteActivity">


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_editNote_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:hint="@string/til_editNote_title_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="40">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_editNote_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/tiet_editNote_noteContent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/tv_note_type_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:paddingStart="12dp"
                    android:text="@string/tv_note_type_label"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            <RadioGroup
                    android:id="@+id/rg_editNote_note_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="32dp"
                    android:paddingBottom="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_editNote_noteContent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:hint="@string/til_editNote_noteContent_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="500">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_editNote_noteContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_editNote_saveButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:text="@string/mb_editNote_saveButton_text"
                    android:textAppearance="@style/Widget.MaterialComponents.Button"
                    android:textSize="18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>