<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"


        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_newNote"

            android:layout_width="match_parent"
            android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctl_newNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/Collapsed"
                app:contentScrim="?attr/colorPrimary"

                app:expandedTitleTextAppearance="@style/Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:scrimAnimationDuration="200"
                app:title="@string/new_note_activity_title"
                app:toolbarId="@+id/tb_newNote">

            <TextView
                    android:id="@+id/tv_newNote_appBarText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/new_note_activity_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb_newNote"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:showDividers="middle"
                tools:context=".NewNoteActivity">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/input_rounded_corners"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_note_type_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:paddingTop="16dp"
                        android:text="@string/tv_note_type_label"
                        android:textColor="@color/gray"
                        android:textSize="18sp" />

                <RadioGroup
                        android:id="@+id/rg_newNote_note_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="32dp"
                        android:paddingBottom="16dp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_newNote_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:hint="@string/til_newNote_title_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="40">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_newNote_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@id/tiet_newNote_noteContent"
                        android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_newNote_noteContent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:hint="@string/til_newNote_noteContent_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="500">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_newNote_noteContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/form_divider"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/til_editNote_title_date">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_newNote_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_divider"
                        android:clickable="false"
                        android:drawableEnd="@drawable/ic_notifications_black_24dp"
                        android:drawableTint="@color/gray"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:longClickable="false"
                        android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_newNote_saveButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_divider"
                    android:singleLine="false"
                    android:text="@string/mb_newNote_saveButton_text"
                    android:textAppearance="@style/Widget.MaterialComponents.Button"
                    android:textSize="18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>